cmake_minimum_required(VERSION 3.16)
project(i2prc)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-static -g")
set(LIBDIR libi2pd)
set(THIRDLIB  /lib/x86_64-linux-gnu)
add_subdirectory(${LIBDIR})
aux_source_directory(i2prc SRC)
add_executable(${PROJECT_NAME} ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${LIBDIR})
target_link_directories(${PROJECT_NAME} PUBLIC ${LIBDIR})
target_link_libraries(${PROJECT_NAME} PUBLIC i2pd)
