cmake_minimum_required(VERSION 3.16)
project(cli)
set(CMAKE_CXX_FLAGS "-static -g")
set(CLIGENLIB deps)
set(CLIGENINC include)
add_executable(${PROJECT_NAME} cli.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${CLIGENINC})
target_link_directories(${PROJECT_NAME} PUBLIC ${CLIGENLIB})
target_link_libraries(${PROJECT_NAME} PUBLIC cligen)
